--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
   font-weight: 700;
   font: Helvetica;
   color: aliceblue;
-  position: relative;
+  position: absolute;
   text-align: left;
-  padding: 10% 55% 0% 25%;
+  padding: 10% 40% 0% 25%;
+  margin-left: -80px;
+  text-shadow: black;
 }
 
 .introduction h1 {
@@ -19,6 +21,7 @@
 .introduction h3 {
   color: grey;
   font-size: 150%;
+  margin-top: -25px;
 }
 
 .responsive {
@@ -35,76 +38,95 @@
 }
 
 .navbar {
-    align-items: center;
-    background-color: rgb(49, 48, 48);
-    display: flex;
-    padding: 0% 0% 0% 18%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5em;
+  align-items: center;
+  background-color: rgb(49, 48, 48);
+  display: flex;
+  padding: 0% 0% 0% 3%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 5em;
 }
 
 .navbar a {
-      color: white;
-      font-family: arial;
-      font-weight: 400;
-      text-decoration: none;
-    }
+  color: white;
+  font-family: arial;
+  font-weight: 400;
+  text-decoration: none;
+}
 
 .main-nav-items {
-    display: flex;
-    align-items: baseline;
-    list-style-type: none;
-    padding-left: 1rem;
+  display: flex;
+  align-items: baseline;
+  list-style-type: none;
+  padding-left: 1rem;
+}
+
+.navbar a.home-link img {
+  filter: invert(100%);
 }
 
 li + li {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .dropdown {
-    overflow: hidden;
-  }
+  overflow: hidden;
+}
   
 .dropdown .dropbtn {  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    font-size: inherit;
-  }
-  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 .navbar a:hover, .dropdown:hover .dropbtn {
-    color: darken;
-  }
-  
+  color: darken;
+}
+
+
 .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  position: absolute;
+  top: 75px;
+  left: 250px;
+  padding: 2% 15% 2% 1%;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 4px;
+  z-index: 1;
+  display: none;
+  animation: fadein .6s;
   }
-  
+
+@keyframes fadein {
+  from {opacity: 0; }
+  to {opacity: 1; }
+}
+ 
 .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a.bold {
+  font-weight: bold;
+}
   
-/* .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-   */
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
+}
+
+hr {
+  width: 200%;
+  opacity: .5;
   }
