--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
 
 .navbar {
   align-items: center;
-  background-color: rgb(49, 48, 48);
+  background-color: rgb(32, 30, 30);
   display: flex;
   padding: 0% 0% 0% 3%;
   position: fixed;
@@ -93,8 +93,10 @@ li + li {
 
 .dropdown-content {
   position: absolute;
-  top: 75px;
-  left: 250px;
+  top: 80%;
+  left: auto;
+  margin-left: -50px;
+  right: auto;
   padding: 2% 15% 2% 1%;
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -102,7 +104,8 @@ li + li {
   z-index: 1;
   display: none;
   animation: fadein .6s;
-  }
+}
+
 
 @keyframes fadein {
   from {opacity: 0; }
@@ -129,4 +132,41 @@ li + li {
 hr {
   width: 200%;
   opacity: .5;
-  }
+}
+
+.secondary-nav-items {
+  list-style-type: none;
+  position: absolute;
+  top: 0%;
+  right: 5%;
+  display: flex;
+  align-items: baseline;
+}
+
+.secondary-nav-items input[type=text] {
+  padding: 8px;
+  border: none;
+  margin-top: 8px;
+  font-size: 17px;
+  background-color: #313131;
+  border-radius: 4px;
+}
+
+.secondary-nav-items .dropdown .dropbtn {
+  display: inline-block;
+  padding: 0px;
+  margin: 0px;
+  left: auto;
+}
+
+.secondary-nav-items .Sign-up button {
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: white;
+  color: white;
+  padding: 8px;
+  background-color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+}
